# PathTracer

./: CMakeLists.txt  README.md
data/: recur1.sdl  test.sdl  waypoints.csv
data/cornellroom/: cornellroom.sdl  test.sdl
data/cornellroom/cornellroom2/: cornellroom2.sdl  readme.txt
learning/: lbf.py
src/: ApplicationManager.h  CMakeLists.txt  Image.h  Light.h  LightScheme.h  Main.cpp  MathSupport.cpp  MathSupport.h  Object.h  RenderingManager.h  Scene.h  Vec.h  aabb.h  box.cpp  box.h  camera.cpp  camera.h  color.h  defines.h  feature.h  filesystemutil.cpp  filesystemutil.h  imagebuffer.cpp  imagebuffer.h  intersection.cpp  intersection.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  npywriter.cpp  npywriter.h  object.cpp  object.h  quadric.cpp  quadric.h  ray.cpp  (+12 more)
utils/: interpolate_waypoints.py  lbf.py  navigate.py  npy2gif.py  showimage.py
